# Lento-Core

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: README.md  Reference.md
examples/basic/: arithmetic.lt  pattern_matching.lt  statements.lt
examples/collections/: lists.lt  maps.lt  tuples.lt
examples/matching/: basic.lt  guards.lt
examples/types/: alias.lt  enums.lt  ranges.lt
src/: conf.rs  lib.rs
src/compiler/: CONTRIBUTING.md  compiler.rs  error.rs  mod.rs
src/compiler/backends/: README.md  cranelift.rs  mod.rs
src/compiler/backends/c/: README.md
src/compiler/backends/cranelift/: README.md  cranelift.rs  mod.rs  tests.rs
src/compiler/backends/javascript/: README.md  mod.rs
src/compiler/backends/llvm/: README.md  mod.rs
src/compiler/backends/nasm/: mod.rs
src/compiler/backends/qbe/: README.md  mod.rs
src/doc/: mod.rs
src/interpreter/: environment.rs  error.rs  interpreter.rs  mod.rs  number.rs  tester.rs  tests.rs  value.rs
src/lexer/: error.rs  lexer.rs  mod.rs  op.rs  tests.rs  token.rs
src/lexer/readers/: bytes_reader.rs  mod.rs  reset_buf_reader.rs  stdin.rs
src/parser/: ast.rs  error.rs  mod.rs  op.rs  parser.rs  tests.rs
src/printer/: printer.rs
src/project/: builder.rs  init.rs  mod.rs  runner.rs
src/stdlib/: README.md  arithmetic.rs  init.rs  logical.rs  mod.rs  system.rs  tests.rs
src/type_checker/: checked_ast.rs  checker.rs  mod.rs  tests.rs  types.rs
src/util/: failable.rs  mod.rs  str.rs
