[package]
name = "lento_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-bigfloat = "1.6.1"
lazy-regex = "2.4.1"
cranelift-codegen = "0.105.2"
target-lexicon = "0.12.14"
