[package]
name = "lento_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.4.1"
cranelift-codegen = "0.105.2"
target-lexicon = "0.12.14"
cranelift-object = "0.105.3"
cranelift-module = "0.105.3"
colorful = "0.3.2"
malachite = "0.4.16"
